--- a/index.html
+++ b/index.html
@@ -2,11 +2,238 @@
 <html lang="ru">
   <head>
     <meta charset="utf-8">
-    <title>HTML Academy: {{projectTitle}}</title>
+    <title>index.html</title>
   </head>
   <body>
 
-    <p>Репозиторий создан для обучения на профессиональном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">HTML и CSS. Профессиональная вёрстка сайтов</a>».</p>
+    <header>
+      <img class="header-logo" src="" alt="header-logo-device-shop">
+      <form class="header-search" action="" method="post">
+        <img class="search-img" src="" alt="search-img">
+        <input class="search-input" type="search" placeholder="Текст поиска">
+        <input class="search-button" type="submit" value="Найти">
+      </form>
+      <img class="login-logo" src="" alt="login-logo">
+      <a class="login" href="">Войти</a>
+      <ul class="basket-block">
+        <li class="compare">
+          <img class="compare-logo" src="" alt="compare-logo">
+          <a class="compare-button" href="">Сравнить</a>
+        </li>
+        <li class="basket">
+          <img class="basket-logo" src="" alt="basket-logo">
+          <a class="basket-button" href="">Корзина</a>
+        </li>
+      </ul>
+      <div class="drop-list">
+        Каталог Товаров
+        <button class="drop-list-button" type="button">+</button>
+      </div>
+      <nav class="header-navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="">Доставка</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="">Гарантия</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
 
+    <main class="main-index">
+      <h1 class="visually-hidden">device shop</h1>
+      <section class="slider-block">
+        <img class="slider-image" src="" alt="Презентация-товара">
+        <button class="slider-button slider-prev" type="button">
+          <span class="visually-hidden">Предыдущий слайд</span>
+        </button>
+        <button class="slider-button slider-next" type="button">
+          <span class="visually-hidden">Следующий слайд</span>
+        </button>
+        <span class="silde-number">01</span>
+          <h2>Порхает как бабочка, жалит как пчела!</h2>
+        <p>
+          Этот обычный, на первый взгляд, квадрокоптер оснащен мощным лазером, замаскированным под стандартную камеру.
+        </p>
+        <a class="slider-more" href="">Подробнее</a>
+        <dl class="slider-dl">
+          <dt class="slider-dt">Дальность полёта</dt>
+          <dd class="sldier-dd">800 м</dd>
+          <dt class="slider-dt">Радиус поражения</dt>
+          <dd class="sldier-dd">50 м</dd>
+        </dl>
+        <ol class="slider-pagination">
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button slider-pagination-button-current" type="button">
+              <span class="visually-hidden">1 фото</span>
+            </button>
+          </li>
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button" type="button">
+              <span class="visually-hidden">2 фото</span>
+            </button>
+          </li>
+          <li class="slider-pagination-item">
+            <button class="slider-pagination-button" type="button">
+              <span class="visually-hidden">3 фото</span>
+            </button>
+          </li>
+        </ol>
+      </section>
+      <section class="categories-block">
+        <ul class="categories-list">
+          <li class="categories-item">
+            <a class="categories-link" href="">
+              <img class="categories-block-image" src="" alt="categories-logo">
+              Виртуальная реальность
+            </a>
+          </li>
+          <li class="categories-item">
+            <a class="categories-link" href="">
+              <img class="categories-block-image" src="" alt="categories-logo">
+              Моноподы для селфи
+            </a>
+          </li>
+          <li class="categories-item">
+            <a class="categories-link" href="">
+              <img class="categories-block-image" src="" alt="categories-logo">
+              Экшн-камеры
+            </a>
+          </li>
+          <li class="categories-item">
+            <a class="categories-link" href="">
+              <img class="categories-block-image" src="" alt="categories-logo">
+              Фитнес-браслеты
+            </a>
+          </li>
+          <li class="categories-item">
+            <a class="categories-link" href="">
+              <img class="categories-block-image" src="" alt="categories-logo">
+              Умные браслеты
+            </a>
+          </li>
+          <li class="categories-item">
+            <a class="categories-link" href="">
+              <img class="categories-block-image" src="" alt="categories-logo">
+              Квадрокоптеры
+            </a>
+          </li>
+        </ul>
+      </section>
+      <section class="services-block">
+        <ul class="services-list">
+          <li class="services-delivery">
+            <button class="delivery-button services-button-current" type="button">Доставка</button>
+            <h2>Доставка</h2>
+            <p>Мы с удовольствием доставим ваш товар прямо
+              к вашему подъезду совершенно бесплатно! Ведь
+              мы неплохо заработаем, поднимая его на ваш этаж.</p>
+            <img class="services-logo" alt="delivery-logo">
+          </li>
+          <li class="services-guarantee">
+            <button class="guarantee-button" type="button">Доставка</button>
+            <h2>Гарантия</h2>
+            <p>Если из-за возгорания купленного у нас товара у вас
+              сгорит дом — не переживайте, мы выдадим вам новый.
+              Товар, не дом, конечно же.</p>
+            <img class="services-logo" alt="guarantee-logo">
+          </li>
+          <li class="services-credit">
+            <button class="credit-button" type="button">Кредит</button>
+            <h2>Кредит</h2>
+            <p>Залезть в долговую яму стало проще!
+              Кредитные консультанты подберут для вас наиболее выгодные условия кредита.
+              Выгодные для банка, разумеется.</p>
+            <img class="services-logo" alt="credit-logo">
+          </li>
+        </ul>
+      </section>
+      <section class="delivery-on-order">
+        <button class="delivery-on-order-button" type="button">
+          <img class="delivery-on-order-logo" src="" alt="delivery-on-order-logo">
+          доставим редкий товар под заказ
+        </button>
+        <button class="delivery-on-order-info" type="button">?</button>
+      </section>
+      <section class="about">
+        <h2>О нас</h2>
+        <p>Огромный выбор гаджетов не оставит равнодушным гика, который есть в каждом из нас.</p>
+        <p>Мы можем доставить ваш товар в самые отдалённые уголки России транспортными компаниями:</p>
+        <ul class="delivery-companies-list">
+          <li class="delivery-companies-itm">Меловые линии</li>
+          <li class="delivery-companies-itm">СДИК</li>
+          <li class="delivery-companies-itm">ТоксБерри</li>
+        </ul>
+        <a class="about-more" href="">подробнее о нас</a>
+        <h2>Контакты</h2>
+        <p>Вы можете забрать товар сами, заехав в наш офис.
+          Заодно сможете проверить работоспособность покупки.</p>
+        <h3>Интернет-магазин «Девайс»</h3>
+        <p>Санкт-Петербург, набережная реки Карповки, 5, литера П.</p>
+        <a class="about-tel-number" href="tel:+7 (812) 812-12-12">+7 (812) 812-12-12</a>
+        <h3>Время работы</h3>
+        <p>пн—пт: с 10:00 до 22:00<br />
+          сб—вс: с 10:00 до 19:00</p>
+        <a class="about-write-to-us" href="">напишите нам</a>
+      </section>
+      <section class="newsletter">
+        <h2>Подпишитесь на рассылку</h2>
+        <p>Еженедельный дайджест с обзорами новинок,
+          длительными тест-драйвами, распаковками, а также акции, спецпредложения и вот это вот всё.</p>
+        <form class="newsletter-form" action="" method="post">
+          <p class="newsletter-email">
+            <label class="visually-hidden" for="newsletter-email">Email</label>
+            <input class="field" placeholder="Ваш e-mail" type="email" name="newsletter-email" id="newsletter-email" required>
+          </p>
+          <button class="newsletter-button" type="submit">подписаться</button>
+          <img class="newsletter-green-logo" src="" alt="green-logo">
+          <span class="green-logo-text">Это бесплатно</span>
+        </form>
+      </section>
+    </main>
+
+    <footer class="page-footer">
+      <img class="header-logo" src="" alt="header-logo-device-shop">
+      <p>Санкт-Петербург, набережная
+        реки Карповки, 5, литера П.</p>
+      <nav class="footer-navigation">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link" href="">Доставка</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="">Гарантия</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link" href="">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <a class="about-tel-number" href="tel:+7 (812) 812-12-12">+7 (812) 812-12-12</a>
+      <ul class="footer-social-list">
+        <li class="footer-social-item">
+          <a class="footer-social-button">
+            <span class="visually-hidden">Фейсбук</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="footer-social-button">
+            <span class="visually-hidden">Инстаграм</span>
+          </a>
+        </li>
+        <li class="footer-social-item">
+          <a class="footer-social-button">
+            <span class="visually-hidden">Твиттер</span>
+          </a>
+        </li>
+      </ul>
+      <a class="html-academy-link" href="https://htmlacademy.ru">
+        <span class="visually-hidden">html academy logo</span>
+      </a>
+    </footer>
   </body>
 </html>
