--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <header class="header">
-      <a class="header__logo logo">
-        <img src="" width="" height="" alt="Магазина Девайс">
+      <a class="header__logo logo" href="index.html">
+        <img src="" width="" height="" alt="Магазин Девайс">
       </a>
 
       <form class="header__form" action="" method="post">
