--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <header class="header">
-      <a class="header__logo logo" href="index.html">
+      <a class="header__logo logo">
         <img src="" width="" height="" alt="Магазин Девайс">
       </a>
 
