--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
   <body>
     <header class="header">
       <a class="header__logo logo">
-        <img src="" width="" height="" alt="Магазин Девайс">
+        <img src="img/header-logo.svg" width="145" height="36" alt="Магазин Девайс">
       </a>
 
       <form class="header__form" action="" method="post">
-        <img class="header__search-icon" src="img/loop.svg" alt="" aria-hidden="true">
+        <img class="header__search-icon" src="img/loop.png" width="16" height="16" alt="" aria-hidden="true">
         <label class="visually-hidden" for="search">Поиск</label>
         <input class="header__search-input" id="search" type="search" name="search" placeholder="Текст поиска">
         <button class="header__submit" type="submit">Найти</button>
@@ -20,19 +20,19 @@
       <ul class="header__user-list user-list">
         <li class="user-list__item">
           <a class="user-list__link" href="#">
-            <img src="" width="" height="" alt="Входа в личный кабинет">
+            <img src="img/login-icon.png" width="15" height="12" alt="Входа в личный кабинет">
             Войти
           </a>
         </li>
         <li class="user-list__item">
           <a class="user-list__link" href="#">
-            <img src="" width="" height="" alt="Сравнение товаров">
+            <img src="img/compare-icon.png" width="10" height="12" alt="Сравнение товаров">
             Сравнить
           </a>
         </li>
         <li class="user-list__item">
           <a class="user-list__link" href="#">
-            <img src="" width="" height="" alt="Корзина">
+            <img src="img/cart-icon.png" width="16" height="14" alt="Корзина">
             <span>2</span>
             Корзина
           </a>
@@ -45,7 +45,7 @@
                   Любительская селфи-палка
                 </a>
                 <button class="user-popover__close" type="button">
-                  <img src="" width="" height="" alt="Удаление товара">
+                  <img src="img/popover-cross.png" width="10" height="10" alt="Удаление товара">
                 </button>
               </li>
               <li class="user-popover__item">
@@ -54,7 +54,7 @@
                   Профессиональная селфи-палка
                 </a>
                 <button class="user-popover__close" type="button">
-                  <img src="" width="" height="" alt="Удаление товара">
+                  <img src="img/popover-cross.png" width="10" height="10" alt="Удаление товара">
                 </button>
               </li>
             </ul>
@@ -75,7 +75,7 @@
           <li class="nav__item">
             <a class="nav__link" href="#">Каталог Товаров</a>
             <button class="nav__toggle" type="button">
-              <img src="" width="" height="" alt="" aria-hidden="true">
+              <img src="img/header-catalog-button.png" width="50" height="50" alt="" aria-hidden="true">
             </button>
 
             <div class="nav__dropdown dropdown">
@@ -123,7 +123,7 @@
         <div class="slider">
           <ul class="slider__list">
             <li class="slider__item">
-              <img class="slider__img" src="" width="" height="" alt="Дроны">
+              <img class="slider__img" src="img/slider-1.jpg" width="560" height="560" alt="Дроны">
 
               <button class="slider__toggle slider__toggle--left" type="button">
                 <span class="visually-hidden">Предыдущий слайд</span>
@@ -151,65 +151,49 @@
                 </div>
               </dl>
 
-              <ul class="slider__list">
-                <li class="slider__item">
-                  <img class="slider__img" src="" width="" height="" alt="Фитнес-браслеты">
-
-                  <button class="slider__toggle slider__toggle--left" type="button">
-                    <span class="visually-hidden">Предыдущий слайд</span>
+              <ul class="slider__pagination-list">
+                <li class="slider__pagination-item">
+                  <button class="slider__pagination-button" type="button">
+                    <span class="visually-hidden">1 фото</span>
                   </button>
-                  <button class="slider__toggle slider__toggle--right" type="button">
-                    <span class="visually-hidden">Следующий слайд</span>
+                </li>
+                <li class="slider__pagination-item">
+                  <button class="slider__pagination-button" type="button">
+                    <span class="visually-hidden">2 фото</span>
                   </button>
+                </li>
+                <li class="slider__pagination-item">
+                  <button class="slider__pagination-button" type="button">
+                    <span class="visually-hidden">3 фото</span>
+                  </button>
+                </li>
+              </ul>
+            </li>
 
-                  <p class="slider__title"><b>Худеем правильно!</b></p>
-                  <p class="slider__text">
-                    Мотивирующие фитнес-браслеты помогут найти в себе силы
-                    не пропускать занятия и соблюдать диету.
-                  </p>
+            <li class="slider__item">
+              <img class="slider__img" src="img/slider-2.jpg" width="560" height="560" alt="Фитнес-браслеты">
 
-                  <a class="slider__more-button button" href="#">Подробнее</a>
+              <button class="slider__toggle slider__toggle--left" type="button">
+                <span class="visually-hidden">Предыдущий слайд</span>
+              </button>
+              <button class="slider__toggle slider__toggle--right" type="button">
+                <span class="visually-hidden">Следующий слайд</span>
+              </button>
 
-                  <dl class="slider__info">
-                    <div class="slider__info-wrap">
-                      <dt>Без подзарядки</dt>
-                      <dd>48 часов</dd>
-                    </div>
-                  </dl>
+              <p class="slider__title"><b>Худеем правильно!</b></p>
+              <p class="slider__text">
+                Мотивирующие фитнес-браслеты помогут найти в себе
+                силы не пропускать занятия и соблюдать диету.
+              </p>
 
-                  <ul class="slider__list">
-                    <li class="slider__item">
-                      <img class="slider__img" src="" width="" height="" alt="Селфи-палки">
+              <a class="slider__more-button button" href="#">Подробнее</a>
 
-                      <button class="slider__toggle slider__toggle--left" type="button">
-                        <span class="visually-hidden">Предыдущий слайд</span>
-                      </button>
-                      <button class="slider__toggle slider__toggle--right" type="button">
-                        <span class="visually-hidden">Следующий слайд</span>
-                      </button>
-
-                      <p class="slider__title"><b>Делай селфи, как Бен Стиллер! </b></p>
-                      <p class="slider__text">
-                        Самая длинная палка для селфи доступна в нашем магазине.
-                        Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
-                      </p>
-
-                      <a class="slider__more-button button" href="#">Подробнее</a>
-
-                      <dl class="slider__info">
-                        <div class="slider__info-wrap">
-                          <dt>Длина палки</dt>
-                          <dd>8.5 м</dd>
-                        </div>
-                        <div class="slider__info-wrap">
-                          <dt>Вес палки</dt>
-                          <dd>5 кг</dd>
-                        </div>
-                        <div class="slider__info-wrap">
-                          <dt>Материал</dt>
-                          <dd>Карбон</dd>
-                        </div>
-                      </dl>
+              <dl class="slider__info">
+                <div class="slider__info-wrap">
+                  <dt>Без подзарядки</dt>
+                  <dd>48 часов</dd>
+                </div>
+              </dl>
 
               <ul class="slider__pagination-list">
                 <li class="slider__pagination-item">
@@ -231,30 +215,36 @@
             </li>
 
             <li class="slider__item">
-              <img src="" width="" height="" alt="Палки для селфи">
+              <img class="slider__img" src="img/slider-3.jpg" width="560" height="560" alt="Селфи-палки">
 
-              <button class="slider__toggle--left" type="button">
+              <button class="slider__toggle slider__toggle--left" type="button">
                 <span class="visually-hidden">Предыдущий слайд</span>
               </button>
-              <button class="slider__toggle--right" type="button">
+              <button class="slider__toggle slider__toggle--right" type="button">
                 <span class="visually-hidden">Следующий слайд</span>
               </button>
 
               <p class="slider__title"><b>Делай селфи, как Бен Стиллер!</b></p>
-              <p class="slider__text text-content">
+              <p class="slider__text">
                 Самая длинная палка для селфи доступна в нашем магазине.
                 Восемь (Восемь, Карл!) метров длиной и весом всего 5 кг.
               </p>
 
-              <a class="slider__more-button more" href="#">Подробнее</a>
+              <a class="slider__more-button button" href="#">Подробнее</a>
 
-              <dl>
-                <dt class="text-content">Длина палки</dt>
-                <dd>8,5 м</dd>
-                <dt class="text-content">Вес палки</dt>
-                <dd>5 кг</dd>
-                <dt class="text-content">Материал</dt>
-                <dd>Карбон</dd>
+              <dl class="slider__info">
+                <div class="slider__info-wrap">
+                  <dt>Длина палки</dt>
+                  <dd>8,5 м</dd>
+                </div>
+                <div class="slider__info-wrap">
+                  <dt>Вес палки</dt>
+                  <dd>5 кг</dd>
+                </div>
+                <div class="slider__info-wrap">
+                  <dt>Карбон</dt>
+                  <dd>Материал</dd>
+                </div>
               </dl>
 
               <ul class="slider__pagination-list">
@@ -274,6 +264,7 @@
                   </button>
                 </li>
               </ul>
+
             </li>
           </ul>
         </div>
@@ -285,37 +276,37 @@
         <ul class="category__list">
           <li class="category__item">
             <a class="category__link" href="#">
-              <img src="" width="" height="" alt="Очки для вритуальной реальности">
+              <img src="img/category-1.svg" width="97" height="55" alt="Очки для вритуальной реальности">
               Виртуальная реальность
             </a>
           </li>
           <li class="category__item">
             <a class="category__link" href="#">
-              <img src="" width="" height="" alt="Палка для селфи">
+              <img src="img/category-2.svg" width="86" height="117" alt="Палка для селфи">
               Моноподы для селфи
             </a>
           </li>
           <li class="category__item">
             <a class="category__link" href="#">
-              <img src="" width="" height="" alt="Экшн-камера">
+              <img src="img/category-3.svg" width="71" height="87" alt="Экшн-камера">
               Экшн-камеры
             </a>
           </li>
           <li class="category__item">
             <a class="category__link" href="#">
-              <img src="" width="" height="" alt="Фитнес-браслет">
+              <img src="img/category-4.svg" width="108" height="65" alt="Фитнес-браслет">
               Фитнес-браслеты
             </a>
           </li>
           <li class="category__item">
             <a class="category__link" href="#">
-              <img src="" width="" height="" alt="Умные часы-браслет">
+              <img src="img/category-5.svg" width="56" height="98" alt="Умные часы-браслет">
               Умные браслеты
             </a>
           </li>
           <li class="category__item">
             <a class="category__link" href="#">
-              <img src="" width="" height="" alt="Квадрокоптер">
+              <img src="img/category-6.svg" width="132" height="69" alt="Квадрокоптер">
               Квадрокоптеры
             </a>
           </li>
@@ -345,6 +336,7 @@
               к вашему подъезду совершенно бесплатно! Ведь
               мы неплохо заработаем, поднимая его на ваш этаж.
             </p>
+            <img src="img/delivery.svg" width="136" height="164" alt="Бегущий человечек">
           </li>
           <li class="advantage__content-item">
             <h3>Гарантия</h3>
@@ -353,6 +345,7 @@
               сгорит дом — не переживайте, мы выдадим вам новый.
               Товар, не дом, конечно же.
             </p>
+            <img src="img/guarantee.svg" width="171" height="195" alt="Гарантия на товар">
           </li>
           <li class="advantage__content-item">
             <h3>Кредит</h3>
@@ -361,16 +354,17 @@
               Кредитные консультанты подберут для вас наиболее выгодные условия кредита.
               Выгодные для банка, разумеется.
             </p>
+            <img src="img/credit.svg" width="156" height="188" alt="Человечек с кредиткой">
           </li>
         </ul>
 
         <button class="advantage__delivery" type="button">
           <span class="advantage__icon-car">
-            <img src="" width="" height="" alt="" aria-hidden="true">
+            <img src="img/delivery-car.svg" width="47" height="31" alt="" aria-hidden="true">
           </span>
           Доставим редкий товар под заказ
           <span class="advantage__icon-info">
-            <img src="" width="" height="" alt="" aria-hidden="true">
+            <img src="img/advantage-info.svg" width="40" height="40" alt="" aria-hidden="true">
           </span>
         </button>
       </section>
@@ -455,7 +449,7 @@
 
     <footer class="footer">
       <a class="footer__logo logo" href="#">
-        <img src="" width="" height="" alt="Магазин Девайс">
+        <img src="img/footer-logo.svg" width="145" height="36" alt="Магазин Девайс">
       </a>
 
       <address class="footer__address">Санкт-Петербург, набережная реки Карповки, 5, литера П.</address>
@@ -477,19 +471,19 @@
       <ul class="footer__socials">
         <li class="footer__social">
           <a class="footer__social-link" href="#">
-            <img src="" width="" height="" alt="Фейсбук">
+            <img src="img/footer-facebook-icon.png" width="40" height="40" alt="Фейсбук">
             <span class="visually-hidden">Фейсбук</span>
           </a>
         </li>
         <li class="footer__social">
           <a class="footer__social-link" href="#">
-            <img src="" width="" height="" alt="Инстаграм">
+            <img src="img/footer-instagram-icon.png" width="40" height="40" alt="Инстаграм">
             <span class="visually-hidden">Инстаграм</span>
           </a>
         </li>
         <li class="footer__social">
           <a class="footer__social-link" href="#">
-            <img src="" width="" height="" alt="Твиттер">
+            <img src="img/footer-twitter-icon.png" width="40" height="40" alt="Твиттер">
             <span class="visually-hidden">Твиттер</span>
           </a>
         </li>
