--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       </a>
 
       <form class="header__form" action="" method="post">
-        <img class="header__search-icon" src="img/loop.png" width="16" height="16" alt="" aria-hidden="true">
+        <img class="header__search-icon" src="img/loop.svg" width="16" height="16" alt="" aria-hidden="true">
         <label class="visually-hidden" for="search">Поиск</label>
         <input class="header__search-input" id="search" type="search" name="search" placeholder="Текст поиска">
         <button class="header__submit" type="submit">Найти</button>
@@ -20,19 +20,19 @@
       <ul class="header__user-list user-list">
         <li class="user-list__item">
           <a class="user-list__link" href="#">
-            <img src="img/login-icon.png" width="15" height="12" alt="Входа в личный кабинет">
+            <img src="img/login-icon.svg" width="15" height="12" alt="Входа в личный кабинет">
             Войти
           </a>
         </li>
         <li class="user-list__item">
           <a class="user-list__link" href="#">
-            <img src="img/compare-icon.png" width="10" height="12" alt="Сравнение товаров">
+            <img src="img/compare-icon.svg" width="10" height="12" alt="Сравнение товаров">
             Сравнить
           </a>
         </li>
         <li class="user-list__item">
           <a class="user-list__link" href="#">
-            <img src="img/cart-icon.png" width="16" height="14" alt="Корзина">
+            <img src="img/cart-icon.svg" width="16" height="14" alt="Корзина">
             <span>2</span>
             Корзина
           </a>
@@ -45,7 +45,7 @@
                   Любительская селфи-палка
                 </a>
                 <button class="user-popover__close" type="button">
-                  <img src="img/popover-cross.png" width="10" height="10" alt="Удаление товара">
+                  <img src="img/popover-cross.svg" width="10" height="10" alt="Удаление товара">
                 </button>
               </li>
               <li class="user-popover__item">
@@ -54,7 +54,7 @@
                   Профессиональная селфи-палка
                 </a>
                 <button class="user-popover__close" type="button">
-                  <img src="img/popover-cross.png" width="10" height="10" alt="Удаление товара">
+                  <img src="img/popover-cross.svg" width="10" height="10" alt="Удаление товара">
                 </button>
               </li>
             </ul>
@@ -336,7 +336,6 @@
               к вашему подъезду совершенно бесплатно! Ведь
               мы неплохо заработаем, поднимая его на ваш этаж.
             </p>
-            <img src="img/delivery.svg" width="136" height="164" alt="Бегущий человечек">
           </li>
           <li class="advantage__content-item">
             <h3>Гарантия</h3>
@@ -345,7 +344,6 @@
               сгорит дом — не переживайте, мы выдадим вам новый.
               Товар, не дом, конечно же.
             </p>
-            <img src="img/guarantee.svg" width="171" height="195" alt="Гарантия на товар">
           </li>
           <li class="advantage__content-item">
             <h3>Кредит</h3>
@@ -354,7 +352,6 @@
               Кредитные консультанты подберут для вас наиболее выгодные условия кредита.
               Выгодные для банка, разумеется.
             </p>
-            <img src="img/credit.svg" width="156" height="188" alt="Человечек с кредиткой">
           </li>
         </ul>
 
@@ -364,7 +361,7 @@
           </span>
           Доставим редкий товар под заказ
           <span class="advantage__icon-info">
-            <img src="img/advantage-info.svg" width="40" height="40" alt="" aria-hidden="true">
+            <img src="img/advantage-info.svg" width="2" height="12" alt="" aria-hidden="true">
           </span>
         </button>
       </section>
@@ -471,19 +468,19 @@
       <ul class="footer__socials">
         <li class="footer__social">
           <a class="footer__social-link" href="#">
-            <img src="img/footer-facebook-icon.png" width="40" height="40" alt="Фейсбук">
+            <img src="img/footer-facebook-icon.svg" width="40" height="40" alt="Фейсбук">
             <span class="visually-hidden">Фейсбук</span>
           </a>
         </li>
         <li class="footer__social">
           <a class="footer__social-link" href="#">
-            <img src="img/footer-instagram-icon.png" width="40" height="40" alt="Инстаграм">
+            <img src="img/footer-instagram-icon.svg" width="40" height="40" alt="Инстаграм">
             <span class="visually-hidden">Инстаграм</span>
           </a>
         </li>
         <li class="footer__social">
           <a class="footer__social-link" href="#">
-            <img src="img/footer-twitter-icon.png" width="40" height="40" alt="Твиттер">
+            <img src="img/footer-twitter-icon.svg" width="40" height="40" alt="Твиттер">
             <span class="visually-hidden">Твиттер</span>
           </a>
         </li>
