--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Главная страница Device</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header class="header">
@@ -242,8 +243,8 @@
                   <dd>5 кг</dd>
                 </div>
                 <div class="slider__info-wrap">
-                  <dt>Карбон</dt>
-                  <dd>Материал</dd>
+                  <dt>Материал</dt>
+                  <dd>Карбон</dd>
                 </div>
               </dl>
 
@@ -367,7 +368,7 @@
       </section>
 
       <section class="about">
-        <h2 class="about__title">О нас</h2>
+        <h3 class="about__title">О нас</h3>
 
         <p class="about__text">
           Огромный выбор гаджетов не оставит равнодушным гика,
@@ -388,7 +389,7 @@
       </section>
 
       <section class="contacts">
-        <h2 class="contacts__title">Контакты</h2>
+        <h3 class="contacts__title">Контакты</h3>
 
         <p class="contacts__text">
           Вы можете забрать товар сами, заехав в наш офис.
@@ -416,7 +417,7 @@
       </section>
 
       <article class="article">
-        <h2 class="article__title">Подпишитесь на рассылку</h2>
+        <h3 class="article__title">Подпишитесь на рассылку</h3>
 
         <p class="article__text">
           Еженедельный дайджест с обзорами новинок,
@@ -487,7 +488,7 @@
       </ul>
 
       <a class="footer__academy" href="https://htmlacademy.ru" target="_blank">
-        <span class="visually-hidden">HTML Academy</span>
+        .html academy
       </a>
     </footer>
   </body>
