--- a/catalog.html
+++ b/catalog.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Каталог товаров</title>
+    <link rel="stylesheet" href="css/styles.css">
   </head>
   <body>
     <header class="header" href="index.html">
@@ -137,11 +138,11 @@
       </div>
 
       <div class="main__filter filter">
-        <h2 class="filter__title">Фильтр:</h2>
+        <h2 class="filter__title filt-sort">Фильтр:</h2>
 
         <form class="filter__form" action="">
           <fieldset class="filter__fieldset">
-            <legend class="filter__legend">Стоимость</legend>
+            <legend class="filter__legend catalog-titles">Стоимость</legend>
 
             <div class="filter__range-buttons">
               <button class="filter__range filter__range--min" type="button">
@@ -163,7 +164,7 @@
           </fieldset>
 
           <fieldset class="filter__fieldset">
-            <legend class="filter__legend">Цвет</legend>
+            <legend class="filter__legend catalog-titles">Цвет</legend>
 
             <ul class="filter__list">
               <li class="filter__item">
@@ -190,7 +191,7 @@
           </fieldset>
 
           <fieldset class="filter__fieldset">
-            <legend class="filter__title">Bluetooth</legend>
+            <legend class="filter__title catalog-titles">Bluetooth</legend>
 
             <ul class="filter__list">
               <li class="filter__item">
@@ -210,7 +211,7 @@
 
       <div class="main__sorting sorting">
         <div class="sorting__top-wrap">
-          <h2 class="sorting__title">Сортировка:</h2>
+          <h2 class="sorting__title filt-sort">Сортировка:</h2>
 
           <form class="sorting__form" action="">
             <select class="sorting__select" name="sort">
@@ -240,7 +241,7 @@
                 <span class="card__new">NEW</span>
               </div>
             </div>
-            <a class="card__link" href="#">Подробнее</a>
+            <a class="card__link button" href="#">Подробнее</a>
           </li>
           <li class="sorting__item card">
             <div class="card__wrapper">
@@ -250,7 +251,7 @@
                 <img src="img/product-2.jpg" width="360" height="380" alt="Профессиональная селфи-палка">
               </div>
             </div>
-            <a class="card__link" href="#">Подробнее</a>
+            <a class="card__link button" href="#">Подробнее</a>
           </li>
           <li class="sorting__item card">
             <div class="card__wrapper">
@@ -260,7 +261,7 @@
                 <img src="img/product-3.jpg" width="360" height="380" alt="Непотопляемая селфи-палка">
               </div>
             </div>
-            <a class="card__link" href="#">Подробнее</a>
+            <a class="card__link button" href="#">Подробнее</a>
           </li>
           <li class="sorting__item card">
             <div class="card__wrapper">
@@ -270,11 +271,11 @@
                 <img src="img/product-4.jpg" width="360" height="380" alt="Селфи-палка «Следуй за мной»">
               </div>
             </div>
-            <a class="card__link" href="#">Подробнее</a>
+            <a class="card__link button" href="#">Подробнее</a>
           </li>
         </ul>
 
-        <button type="sorting__more button">Загрузить ещё</button>
+        <button class="sorting__more" type="button">Загрузить ещё</button>
 
         <ul class="sorting__pagination pagination">
           <li class="pagination__item pagination__item--prev">
@@ -290,7 +291,7 @@
             <a class="pagination__link" href="#">3</a>
           </li>
           <li class="pagination__page">
-            <span class="pagination__dots">...</span>
+            <span class="pagination__link pagination__dots">...</span>
           </li>
           <li class="pagination__page">
             <a class="pagination__link" href="#">15</a>
