--- a/index.html
+++ b/index.html
@@ -488,7 +488,8 @@
       </ul>
 
       <a class="footer__academy" href="https://htmlacademy.ru" target="_blank">
-        .html academy
+        <span class="visually-hidden">HTML Academy</span>
+        <img src="img/footer_html-academy.svg" width="115" height="33" alt="HTML-Академия">
       </a>
     </footer>
   </body>
